--- a/infra/compose/docker-compose.yml
+++ b/infra/compose/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - WHATSAPP_WEBHOOK_SECRET=
       - LLM_PROVIDER=
       - LLM_API_KEY=
+      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
+      - TELEGRAM_WEBHOOK_SECRET=${TELEGRAM_WEBHOOK_SECRET}
     depends_on:
       - db
       - redis
